cluster/apps/whoami/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
  selector:
    app: whoami
