cluster/apps/whoami/hidden.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hidden
  labels:
    app: whoami
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.$host/oauth2/start?rd=$escaped_request_uri"

spec:
  tls:
    - hosts:
        - hidden.zzd.ai
      secretName: my-certs-hidden
  rules:
    - host: hidden.zzd.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
