cluster/apps/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hidden
  labels:
    app: whoami
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: networking-oauth2-proxy-chain@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hidden.kblb.io
      secretName: my-certs-hidden
  rules:
    - host: hidden.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  labels:
    app: whoami
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - whoami.kblb.io
      secretName: my-certs-whoami
  rules:
    - host: whoami.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
