cluster/apps/whoami/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: default
