cluster/apps/whoami/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whoami-network-policy
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
